# others

./: .gitignore  .gitmodules  README.md  delete-history.sh  git_mv_backup.sh  git_pull_optimize.sh  git_sync.sh  git_update.sh  pull.sh  tree.md  tree.txt
.github/workflows/: arch_theme_run_test.yml  arch_theme_run_test.yml.backup
ASM/MASM/: README.md
ASM/MASM/cmos_ram/: month.asm  time.asm  time_not_recommend.asm  time_not_work.asm
ASM/MASM/interrupt/: README.md  p1_installer.asm  p1_run.asm  p2_run.asm
ASM/MASM/keyboard/: p1_main.asm
ASM/MASM/module/: README.md  divdw.asm  dtoc.asm  show_str.asm
ASM/MASM/print/: README.md  main.asm
ASM/NASM/: Readme.md  run_i386.sh
ASM/NASM/Hello World/: compile.sh  main.asm
ASM/NASM/interrupt(linux)/: main.asm
BASH/LAZER/: Readme.md  install.md
BASH/LAZER/20201023/: lazer.sh
BASH/LAZER/20201024/: Readme.md  lazer.sh
BASH/一键部署/HEXO/: Readme.md  Termux_cn.sh
C(Obs)/: data_test.cpp  showBits.c  stdio.c
C(Obs)/class_required/: calc.cpp  guess_number.c  loop_eg.cpp  make_change.cpp  num_loop.c  predictHeight.cpp  whoIsGoodman_s.c
C(Obs)/class_required/arr_op/: arr_op.h
C(Obs)/class_required/correct/: loop_add.c  output_sq.cpp
C(Obs)/class_required/exp7/: main3.c
C(Obs)/class_required/linked_list/: linkedList.cpp
C(Obs)/class_required/randomSeq/: main.cpp
C(Obs)/exam/: t3.c
C(Obs)/exam/20251021/: f1.c  f2.c  f3.c
C/splitter/: Makefile  Readme.md  main.c  splitter.c  splitter.h
CPP/OI/: next_permutation.cpp
CPP/OpenGL_Experiment_Code/: .gitignore
CPP/benmarkTest/: main.cpp
CPP/courseRequirements/CircleClass/: main.cpp
CPP/courseRequirements/EXP/20250415/: CMakeLists.txt  main.cpp  readme.md
CPP/courseRequirements/EXP/20250415/Contact/: CMakeLists.txt
CPP/courseRequirements/EXP/20250415/Contact/include/: contact_required.h
CPP/courseRequirements/EXP/20250415/Contact/src/: ContactSync.cpp
CPP/courseRequirements/EXP/20250415/class/contact/: CMakeLists.txt  ContactMethod.cpp  contact_required.h
CPP/courseRequirements/EXP/20250415/include/: contact_configure.h  contact_required.h
CPP/courseRequirements/EXP/20250415/src/: Contact.cpp  ContactMethod.cpp  contact_methods.cpp
CPP/courseRequirements/EXP/20250415/src/Contact/: CMakeLists.txt  Contact.cpp  ContactMethod.cpp  ContactOp.cpp  ContactSync.cpp
CPP/courseRequirements/EXP/20250415/src/Contact/descrip/: contact_class_diagram.pu
CPP/courseRequirements/EXP/20250415/src/Contact/include/: contact_configure.h  contact_required.h
CPP/courseRequirements/MI/: main.cpp
CPP/courseRequirements/arrProxy/: main.cpp
CPP/courseRequirements/class_and_objects/: main.cpp
CPP/courseRequirements/extends/: main.cpp
CPP/courseRequirements/linkList/: linkList.pu  main.cpp
CPP/courseRequirements/polymorphism/: main.cpp
CPP/exception_handle/: main.cpp
CPP/file_op/: binary_op.cpp  file_op.cpp  file_op.h  main.cpp  struct_op.cpp
CPP/iterator/: main.cpp
CPP/lib/: ClassD.pu  CommunicationD.pu  main.cpp  mylib.cpp
CPP/macro/: getAndSet.h
CPP/module_set/: main.cpp  random.cppm
CPP/迪科斯特拉算法/: main.cpp
C_CPP/: builtin_repeat.c  print_stor.c  print_stor_proof.c  qSORT.c  tadd_ok.c  udiv_b.c
C_CPP/class_required/: c_string_cmp_self.cpp  fibonacci_sequence.c  forward_add.cpp  hanoi.cpp  max_aver_min.cpp  recursiveSolution.cpp  reverse_arr.c  scoringOfCateringServiceQualitySurvey.cpp  whoIsGoodman_if.c
C_CPP/class_required/arr_op/: main.cpp
C_CPP/class_required/correct/: 20241107-1.c
C_CPP/class_required/exp7/: main1.c  main2.c
C_CPP/class_required/exp8/: main1.c  main2.c
C_CPP/class_required/linked_list/: linkedList.h  main.cpp
C_CPP/class_required/randomSeq/: main.cpp  randomSeq.cpp  randomSeq.h
C_CPP/class_required/randomSeq_struct/: main.c
C_CPP/class_required/stuScore/: main.cpp  stuScore.cpp  stuScore.h  stuScore.md  test
C_CPP/exam/: run.sh  t1.c  t2.c
Prove/验证基本不等式链/: prove.py
SHELL/Linux_Bash/: Readme.md
SHELL/Linux_Bash/LAZER/: lazer.sh
SHELL/MAC_BASH/: code_sign.sh  gcc_installer.sh  rclone.sh  yt_list.sh
SHELL/git_collection/: git_clean.sh  git_delete-history.sh  git_pull_optimize.sh  git_up_all_branch.sh  git_update.sh
SHELL/joke/: jvav  rev_repeat.sh
arch_makebuild/zlibrary/: PKGBUILD
c/: arr&&ptr_des.c  average.c  equal.c  loop.c  main  print_stor.c  repeat.c  reverse_arr.c  stdio.c  tdivz.c  uadd_ok.c
c/class_required/: c_string_cmp_self.cpp  predictHeight  predictHeight.cpp  ptr_eg.c  test_score  whoIsGoodman_struct.c
config/: .conkyrc
docker/: openclaw_with_tailscale.yml
haskell/: warshall.hs
haskell/ch01/: WC.hs
haskell/ch02/: add.hs  cDrop.hs
haskell/ch04/: Adler32.hs  CopyFile.hs  InteractWith.hs  append.hs  lambda.hs  myFoldl.hs  oddList.hs  suffixes.hs
haskell/practice/: caesa.hs  helloWorld.hs  helloWorldFiles.hs  maximum.hs  power-set.hs  qsort.hs  reverse.hs  typeclass.hs
plantUML/learn/: index.pu
prolog/: family.pl
prompt/Ref/: Readme.md  comfyui.md  sd.md
python/: bezier.py  calc.py  chFontsInstaller.py  fill_env_to_docker_compose.py  init_novel.py  paste.py  redis_cleanup.py  rev_input.py  sshfs.py  termToImg.py  virus_scan.py  vits-get.py  wc.py
python/backup_script/: backup_all.sh  backup_unity_project.py
python/exam/: 7-1一元多项式的乘法与加法运算.ipynb  7-3两个有序链表序列的并集.ipynb  7-4程序设计综合实践 .ipynb  Floyd.py  KMP.ipynb  中缀计算.ipynb  排序.ipynb  数据结构 最终测试.ipynb
python/graph/: circle.py  fillArea.py  line.py
python/oi/: o1.py  o2.py  o3.py  o4.py
sql/exam1/: Readme.md  initial.sql
sql/exam4/: Readme.md
(+89 files in other folders)
